# chess-engine

./: CMakeLists.txt  README.md  test-library.cpp
inc/chess/: AntiDiagonal.hpp  Attack.hpp  BitBoard.hpp  BitBoardSquare.hpp  CastlingMove.hpp  Diagonal.hpp  Direction.hpp  EnPassantMove.hpp  File.hpp  OccupancyBitBoard.hpp  OccupiedBitBoard.hpp  Piece.hpp  Player.hpp  PlayerPiece.hpp  PositionBitBoards.hpp  PositionSquares.hpp  PromotionMove.hpp  Rank.hpp  RegularMove.hpp  RotatedBitBoard.hpp  Square.hpp  Squares.hpp  ZobristHashing.hpp  antidiagonal.hpp  attack.hpp  bitboard.hpp  bitboard_squares_iterator.hpp  diagonal.hpp  direction.hpp  file.hpp  initialization.hpp  piece.hpp  player.hpp  player_piece.hpp  rank.hpp  rank_attack.hpp  rotated_bitboard.hpp  square.hpp  squares_iterator.hpp  squares_sequence.hpp  (+1 more)
inc/chess/board/: PieceCentric.hpp  PositionBitBoards.hpp  PositionSquares.hpp  SquareCentric.hpp  Visitor.hpp  piece_centric.hpp  square_centric.hpp
inc/chess/hash/: ZobristHashing.hpp
inc/chess/move/: Any.hpp  AnyBackward.hpp  Backward.hpp  Castling.hpp  EnPassant.hpp  Promotion.hpp  Regular.hpp
inc/chess/rotation/: AntiDiagonalRotation.hpp  DiagonalRotation.hpp  FileRotation.hpp
inc/chess/search/: BackwardComputedMove.hpp  ComputedMove.hpp  Position.hpp  alphabeta.hpp  generate_moves.hpp  minimax.hpp  state_machine.hpp
inc/chess/searching/: PlayerBitBoards.hpp  Position.hpp  PositionBitBoards.hpp  PreComputedMove.hpp  ReverseMove.hpp
inc/chess/util/: Iterator.hpp  Log.hpp  MakeBitBoard.hpp  Range.hpp
src/: Attack.cpp
src/chess/: Attack.cpp  BitBoardSquare.cpp  PositionBitBoards.cpp  PositionSquares.cpp  ZobristHashing.cpp  antidiagonal.cpp  antidiagonal_attack.cpp  bitboard.cpp  diagonal.cpp  diagonal_attack.cpp  file_attack.cpp  king_attack.cpp  knight_attack.cpp  pawns_attack.cpp  rank_attack.cpp  rotated_bitboard.cpp  square.cpp
src/chess/board/: PieceCentric.cpp  PositionBitBoards.cpp  PositionSquares.cpp  SquareCentric.cpp  piece_centric.cpp  square_centric.cpp
src/chess/hash/: ZobristHashing.cpp
src/chess/search/: Position.cpp  generate_moves.cpp  state_machine.cpp
src/chess/searching/: Position.cpp  PreComputedMove.cpp
tests/: CMakeLists.txt  TestMoves.cpp  TestPosition.cpp  TestPositionBitBoards.cpp  TestRegularMoves.cpp  test_bitboards.cpp  test_mate_puzzles.cpp
